--- a/app/mailscribe/assets/css/global.scss
+++ b/app/mailscribe/assets/css/global.scss
@@ -1,9 +1,43 @@
 @import "colors";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@300;400;700&display=swap');
+
+// typography:
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.serif-font {
+  font-family: 'Merriweather', serif;
+}
 
 // buttons: 
 .main-btn {
-  background: $dark-blue;
-  color: $dirty-white;
+  background: $accent;
+  color: #fff;
+  text-align: center;
+  height: 60px;
+  border-radius: 21px;
+  line-height: 60px;
+  cursor: pointer;
+  font-weight: 700;
+  display: inline-block;
+  padding-left: 40px;
+  padding-right: 40px;
+  transition: background-color .2s;
+
+  &:hover {
+    background-color: #000;
+  }
+
+  &:focus {
+    outline: none !important;
+    box-shadow: 0 0 10px $accent;
+  }
+}
+
+.text-btn {
+  color: $accent;
   text-align: center;
   height: 40px;
   border-radius: 4px;
